Added days-locations.css for %-based positioning

--- a/advent-test.html
+++ b/advent-test.html
@@ -14,6 +14,8 @@
 
     <!-- style sheet links -->
     <link rel="stylesheet" href="advent.css" type="text/css" />
+    <link rel="stylesheet" href="days-locations.css" type="text/css" />
+    
     <script type="text/javascript">
         var thisyear=2015;
     </script>
