--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <link rel="stylesheet" type="text/css" href="./fancybox/jquery.fancybox-1.3.4.css" media="screen" />
 
     <!-- style sheet links -->
+    <link rel="stylesheet" href="advent.css" type="text/css" />
+    <link rel="stylesheet" href="days-locations.css" type="text/css" />
     <script type="text/javascript">
         var thisyear=2016;
-    </script><link rel="stylesheet" href="advent.css" type="text/css" />
-
+    </script>
     <script src="advent.js" type="text/javascript"></script>
 
   </head>
