Added advent-new.html to read from json file

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- style sheet links -->
     <link rel="stylesheet" href="advent.css" type="text/css" />
     <link rel="stylesheet" href="days-locations.css" type="text/css" />
+
+    <!-- javascript links -->
     <script type="text/javascript">
         var thisyear=2016;
     </script>
