--- a/advent-new.html
+++ b/advent-new.html
@@ -18,7 +18,7 @@
 
     <!-- javascript links -->
     <script type="text/javascript">
-        var thisyear=2016;
+        var thisyear=2017;
     </script>
     <script src="advent-new.js" type="text/javascript"></script>
 
@@ -47,7 +47,8 @@
       adv.yy = adv.date.getFullYear();
       adv.mm = adv.date.getMonth()+1; //getMonth() returns [0-11] (so ad 1)
       adv.dd = adv.date.getDate();
-      adv.months = new Array("Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec");
+      adv.months = new Array(" ","Jan","Feb","Mar","Apr","May","Jun",
+        "Jul","Aug","Sep","Oct","Nov","Dec");
       // Force the date to be 5 Dec 2016
       adv.yy=2016;
       adv.mm=12;
