--- a/advent-new.html
+++ b/advent-new.html
@@ -18,7 +18,7 @@
 
     <!-- javascript links -->
     <script type="text/javascript">
-        var thisyear=2017;
+        var thisyear=2016;
     </script>
     <script src="advent-new.js" type="text/javascript"></script>
 
@@ -32,13 +32,14 @@
 	  <!--Title bar-->
 	  <div class="title-bg"></div>
 	  <div class="title">
-	  <div class="herlogo">
-	    <img src="herschel_RGB_transparent_BB_small.png" alt="Herschel logo">
+	  <div class="logo">
+	    <img src="CardiffPhysics_500px.png" alt="Cardiff Physics logo">
 	  </div>
-	  <div class="date">
+	  <span class="title">Advent Calendar</span>
+      <div class="date">
 	    <span class="date">Date</span>
 	  </div>
-	  <span class="title">Cardiff Physics Advent Calendar</span>
+
 	</div>
     <script type="text/javascript">
 	  <!-- Day boxes-->
