More CSS title tweaks

--- a/advent-new.html
+++ b/advent-new.html
@@ -36,9 +36,10 @@
 	    <img src="CardiffPhysics_500px.png" alt="Cardiff Physics logo">
 	  </div>
 	  <span class="title">Advent Calendar</span>
-      <div class="date">
-	    <span class="date">Date</span>
-	  </div>
+      <span class="date">Date</span>
+      <!-- <div class="date">
+
+	  </div> -->
 
 	</div>
     <script type="text/javascript">
