Tweaked title/date CSS

--- a/advent-new.html
+++ b/advent-new.html
@@ -36,10 +36,9 @@
 	    <img src="CardiffPhysics_500px.png" alt="Cardiff Physics logo">
 	  </div>
 	  <span class="title">Advent Calendar</span>
-      <span class="date">Date</span>
-      <!-- <div class="date">
-
-	  </div> -->
+      <div class="date">
+          <span class="date">Date</span>
+	  </div>
 
 	</div>
     <script type="text/javascript">
