Replaced bg image

--- a/advent-new.html
+++ b/advent-new.html
@@ -27,7 +27,7 @@
   <body>
 
     <div class="advent">
-      <div class="bgimg"><img class="bg" src="advent_bg.jpg">
+      <div class="bgimg"><img class="bg" src="christmas-tree.jpg">
 
 	  <!--Title bar-->
 	  <div class="title-bg"></div>
