Added background image credit

--- a/advent-new.html
+++ b/advent-new.html
@@ -28,7 +28,7 @@
 
     <div class="advent">
       <div class="bgimg"><img class="bg" src="christmas-tree.jpg">
-
+          <div class="bgimg-credit">Background image credit: <a href='https://www.eso.org/public/images/eso0848a/'>ESO</a></div>
 	  <!--Title bar-->
 	  <div class="title-bg"></div>
 	  <div class="title">
