Removed console.log statements from javascript

--- a/advent-new.html
+++ b/advent-new.html
@@ -58,7 +58,7 @@
       adv.datestr=adv.dd+'-'+adv.months[adv.mm]+'-'+adv.yy
       $('span.date').html(adv.datestr)
 
-      //console.log(dd,mm,yy,datestr)
+    //   console.log(adv.dd,adv.mm,adv.yy,adv.datestr)
       adv.setup()
       </script>
       </div>
